[project]
name = "linear-model-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "shiny>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "rsconnect-python>=1.24.0",
]
